[package]
name = "kami"
version = "0.0.1"
authors = ["50ShadesOfCode <killershadow425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.33.3"
term="0.6.1"
run_script="0.6.3"
self_update="0.20.0"
toml="0.5.7"
config="0.10.1"
digest="0.9.0"
sha2="0.9.2"
diesel="1.4.5"
lettre="0.9.5"
time="0.2.22"
chrono="0.4.19"
tracing="0.1.21"
cpp="0.5.5"
log="0.4.11"
ci_info="0.11.0"
static_assertions="1.1.0"
difference="2.0.0"
serde="1.0.117"
base64="0.13.0"
url="2.2.0"
minimp3="0.5.0"
notify-rust="4.0.0"
stdweb="0.4.20"
winit="0.23.0"
iced="0.1.1"
druid="0.6.0"
stretch="0.3.2"
yew="0.17.4"
tokio="0.3.3"